# epiphany

./: .gitmodules  .travis.yml  ChangeLog  ChangeLog.webkit  Makefile.am  TODO  configure.ac  configure.in
data/: Makefile.am  epiphany.schemas.in  org.gnome.epiphany.gschema.xml
data/glade/: epiphany.glade  prefs-dialog.glade
data/pages/: Makefile.am  error.html
data/ui/: Makefile.am  epiphany-ui.xml.in  epiphany.css
embed/: Makefile.am  downloader-view.c  downloader-view.h  ephy-about-handler.c  ephy-about-handler.h  ephy-download.c  ephy-download.h  ephy-embed-container.c  ephy-embed-container.h  ephy-embed-factory.c  ephy-embed-persist.c  ephy-embed-persist.h  ephy-embed-prefs.h  ephy-embed-private.h  ephy-embed-shell.c  ephy-embed-shell.h  ephy-embed-single.c  ephy-embed-single.h  ephy-embed-utils.c  ephy-embed.c  ephy-embed.h  ephy-history.c  ephy-notification-manager.c  ephy-notification-manager.h  ephy-overview.c  ephy-web-view.c  ephy-web-view.h
embed/gecko/: Makefile.am
embed/gecko/bindings/python/: Makefile.am
embed/gecko/data/: Makefile.am  gnome-gecko-embed.pc.in
embed/gecko/src/: Makefile.am
embed/gecko/tests/: Makefile.am
embed/mozilla/: ContentHandler.cpp  ContentHandler.h  EphyBrowser.cpp  EphyBrowser.h  EphyContentPolicy.cpp  EphyDownload.cpp  EphyDownload.h  EphyHeaderSniffer.cpp  EphyHeaderSniffer.h  EphyUtils.cpp  EphyUtils.h  EphyWrapper.cpp  EphyWrapper.h  EventContext.cpp  FilePicker.cpp  GlobalHistory.cpp  GtkNSSDialogs.cpp  GtkNSSKeyPairDialogs.cpp  Makefile.am  MozDownload.cpp  MozDownload.h  MozRegisterComponents.cpp  mozilla-download.cpp  mozilla-downloader-view.cpp  mozilla-downloader-view.h  mozilla-embed-persist.cpp  mozilla-embed-single.cpp  mozilla-embed.cpp  mozilla-notifiers.cpp
embed/web-extension/: ephy-web-dom-utils.c  ephy-web-extension.c
embed/webcore/: Makefile.am  webcore-embed-persist.c  webcore-embed-persist.h  webcore-embed-single.c  webcore-embed-single.h  webcore-embed.c  webcore-embed.h
embed/webkit/: AutoJSContextStack.cpp  AutoJSContextStack.h  AutoWindowModalState.cpp  AutoWindowModalState.h  ContentHandler.cpp  ContentHandler.h  EphyAboutModule.cpp  EphyAboutModule.h  EphyBadCertRejector.cpp  EphyBadCertRejector.h  EphyBrowser.cpp  EphyBrowser.h  EphyContentPolicy.cpp  EphyContentPolicy.h  EphyDirectoryProvider.cpp  EphyDirectoryProvider.h  EphyFind.cpp  EphyFind.h  EphyHeaderSniffer.cpp  EphyHeaderSniffer.h  EphyHistoryListener.cpp  EphyHistoryListener.h  EphyPromptService.cpp  EphyPromptService.h  EphyRedirectChannel.cpp  EphyRedirectChannel.h  EphySidebar.cpp  EphySidebar.h  EphySingle.cpp  EphySingle.h  EphyUtils.cpp  EphyUtils.h  EventContext.cpp  EventContext.h  FilePicker.cpp  FilePicker.h  GeckoFormSigningDialog.cpp  GeckoFormSigningDialog.h  GeckoPrintService.cpp  GeckoPrintService.h  (+35 more)
lib/: Makefile.am  ephy-gui.c  ephy-gui.h  ephy-prefs.h  ephy-profile-migrator.c  ephy-profile-utils.h  ephy-snapshot-service.c  ephy-snapshot-service.h  ephy-web-app-utils.c  ephy-zoom.c  ephy-zoom.h
lib/egg/: Makefile.am  egg-editable-toolbar.c  egg-editable-toolbar.h  egg-toolbar-editor.c  egg-toolbars-model.c  egg-toolbars-model.h  eggtreemodelunion.c
lib/history/: ephy-history-service.c
lib/widgets/: Makefile.am  ephy-arrow-toolbutton.c  ephy-cell-renderer-progress.c  ephy-cell-renderer-progress.h  ephy-file-chooser.c  ephy-frecent-store.c  ephy-location-entry.c  ephy-location-entry.h  ephy-overview-store.c  ephy-overview-store.h  ephy-password-notification.c  ephy-removable-pixbuf-renderer.c  ephy-tree-model-node.c  gd-main-view-generic.c  gd-main-view-generic.h  gd-main-view.c
po/: ChangeLog  POTFILES.in
src/: Makefile.am  ephy-action-helper.c  ephy-action-helper.h  ephy-active-store.c  ephy-active-store.h  ephy-bookmark-properties-grid.c  ephy-bookmark-row.c  ephy-bookmark.c  ephy-bookmark.h  ephy-bookmarks-manager.c  ephy-bookmarks-popover.c  ephy-completion-model.c  ephy-completion-model.h  ephy-encoding-dialog.c  ephy-encoding-menu.c  ephy-extensions-manager.c  ephy-favicon-action.c  ephy-favicon-action.h  ephy-frecent-store.c  ephy-frecent-store.h  ephy-header-bar.c  ephy-header-bar.h  ephy-history-window.c  ephy-home-action.c  ephy-location-action.c  ephy-location-action.h  ephy-location-controller.c  ephy-lockdown.c  ephy-main.c  ephy-navigation-action.c  ephy-navigation-history-action.c  ephy-notebook.c  ephy-overview.c  ephy-overview.h  ephy-search-provider.c  ephy-session.c  ephy-shell.c  ephy-shell.h  ephy-spinner-action.c  ephy-spinner-action.h  (+18 more)
src/bookmarks/: ephy-bookmark-action-group.h  ephy-bookmarks-editor.c  ephy-bookmarks-menu.h  ephy-bookmarks.c  ephy-bookmarksbar-model.c  ephy-bookmarksbar.c  ephy-nodes-cover.h  ephy-open-tabs-action.h
src/resources/: epiphany-ui.xml  epiphany.css
tests/: Makefile.am  ephy-completion-model-test.c  ephy-location-entry-test.c  ephy-snapshot-service.c  test-ephy-action-helper.c
